<project 
    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.cornutum.tcases</groupId>
  <artifactId>tcases</artifactId>
  <packaging>pom</packaging>
  <version>4.1.2-SNAPSHOT</version>

  <name>Tcases</name>
  <description>Generates test cases from system input space models</description>
  <url>https://github.com/Cornutum/tcases</url>

  <developers>
    <developer>
      <name>Kerry Kimbrough</name>
      <email>tcases@cornutum.org</email>
      <organization>The Cornutum Project</organization>
      <organizationUrl>http://www.cornutum.org</organizationUrl>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>The MIT License</name>
      <url>http://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <organization>
    <name>The Cornutum Project</name>
    <url>http://www.cornutum.org/</url>
  </organization>

  <scm>
    <connection>scm:git:https://github.com/Cornutum/tcases</connection>
    <developerConnection>scm:git:https://github.com/Cornutum/tcases</developerConnection>
    <url>https://github.com/Cornutum/tcases</url>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/Cornutum/tcases/issues</url>
  </issueManagement>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tcasesJunit>true</tcasesJunit>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
          <configuration>
            <source>21</source>
            <target>21</target>
            <encoding>UTF-8</encoding>
            <compilerArgument>-Xlint:all</compilerArgument>
            <compilerArgument>-Xlint:-processing</compilerArgument>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.21.0</version>
          <executions>
            <execution>
              <id>default-cli</id>
              <goals>
                <goal>set</goal>
              </goals>
              <configuration>
               <generateBackupPoms>false</generateBackupPoms>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.7.0</version>
            <extensions>true</extensions>
            <configuration>
                <publishingServerId>central</publishingServerId>
                <autoPublish>true</autoPublish>
                <deploymentName>Tcases</deploymentName>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.5.0</version>
        </plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <version>3.6.1</version>
        </plugin>
        <plugin>
            <groupId>org.cornutum.tcases</groupId>
            <artifactId>tcases-maven-plugin</artifactId>
            <version>${project.version}</version>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>3.5.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
        <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
        </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <classifier>javadoc</classifier>
              <doclint>none</doclint>
              <links>
                <link>http://www.cornutum.org/tcases/docs/api</link>
                <link>https://javadoc.io/doc/io.swagger.core.v3/swagger-models/latest</link>
                <link>https://www.javadoc.io/static/com.fasterxml.jackson.core/jackson-databind/2.12.1</link>
                <link>https://www.javadoc.io/static/com.fasterxml.jackson.core/jackson-core/2.12.1</link>
              </links>
            </configuration>
          </execution>
        </executions>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-source-plugin</artifactId>
      <version>3.4.0</version>
      <executions>
        <execution>
          <id>attach-sources</id>
          <goals>
            <goal>jar</goal>
          </goals>
          <configuration>
            <classifier>sources</classifier>
          </configuration>
        </execution>
      </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>          
        </plugins>
      </build>      
    </profile>

    <profile>
      <id>tcases</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.cornutum.tcases</groupId>
            <artifactId>tcases-maven-plugin</artifactId>
            <configuration>
              <junit>${tcasesJunit}</junit>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.cornutum.testing</groupId>
        <artifactId>hamcrest-composites</artifactId>
        <version>1.3.0</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.cornutum.regexp</groupId>
        <artifactId>regexp-gen</artifactId>
        <version>3.0.0</version>
      </dependency>

      <dependency>
        <groupId>org.cornutum.annotation</groupId>
        <artifactId>finder</artifactId>
        <version>1.0.0</version>
      </dependency>
      
      <dependency>
          <groupId>org.hamcrest</groupId>
          <artifactId>hamcrest-library</artifactId>
          <version>2.2</version>
          <scope>test</scope>
      </dependency>
      
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>com.github.dreamhead</groupId>
          <artifactId>moco-junit</artifactId>
          <version>1.1.0</version>
          <scope>test</scope>
      </dependency>
      
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.15.0</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.19.0</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>1.14.0</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>4.4</version>
      </dependency>

      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.3.12</version>
        <scope>runtime</scope>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.11</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <modules>
    <module>tcases-ant</module>
    <module>tcases-lib</module>
    <module>tcases-io</module>
    <module>tcases-cli</module>
    <module>tcases-shell</module>
    <module>tcases-maven-plugin</module>
    <module>tcases-openapi</module>
    <module>tcases-openapi-test</module>
    <module>tcases-rest-assured</module>
    <module>tcases-moco</module>
  </modules>

</project>
